# path-flow

./: Cargo.toml  README.md  domain.md  todo.md
core/src/: lib.rs
core/src/flow/: conversation.rs  flow_manager.rs
core/src/graph/: edge.rs  flow_graph.rs  node.rs
core/src/graph/edge/: condition.rs  edge.rs  edge_builder.rs  mod.rs
core/src/graph/edge/tests/: condition_implementation.rs
core/src/graph/flow_graph/: flow_graph.rs  mod.rs
core/src/graph/node/: node.rs  node_builder.rs  node_context.rs
core_flow/: Cargo.toml
core_flow/src/flow/: conversation.rs  flow_manager.rs  mod.rs
core_flow/src/graph/: mod.rs
core_flow/src/graph/action/: action.rs  action_registry.rs  mod.rs  registrable_action.rs  utils.rs
core_flow/src/graph/action/tests/: action_implementation.rs
core_flow/src/graph/condition/: condition.rs  condition_registry.rs  mod.rs
core_flow/src/graph/edge/: condition.rs  condition_registry.rs  edge.rs  edge_builder.rs  mod.rs
core_flow/src/graph/flow_graph/: flow_graph.rs  flow_graph_builder.rs  mod.rs
core_flow/src/graph/node/: action.rs  action_registry.rs  mod.rs  node.rs  node_builder.rs  node_context.rs
examples/: mongo_conversation_example.rs
implementations/: Cargo.toml  MongoDB_README.md
implementations/src/: lib.rs
implementations/src/ai_action/: ai_action.rs  message_adapter.rs  mod.rs
implementations/src/conversation_repository/: mod.rs  mongo_conversation_repository.rs
implementations/src/send_message/: send_message.rs
src/: main.rs
src/api/: handlers.rs  mod.rs  models.rs  repository.rs  state.rs
(+5 files in other folders)
