[workspace]
members = ["core_flow", "implementations"]

[package]
name = "path-flow"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
core_flow = { path = "./core_flow" }
implementations = { path = "./implementations" }
tokio = {version = "1.45.1", features = ["full"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
axum = "0.8.4"
